syntax = "proto3";

enum ORDER_STATUS {
    CREATED = 0;
    PAID = 1;
    SHIPPED = 2;
    DELIVERED = 3;
    CANCELLED = 4; // 2 and 3 are one or the other. the rest are the progress of an order
    RETURNED = 5; // 4 and 5 are optionally a progression of an order
    REFUNDED = 6;
}

message Product {
    uint32 id = 1;
    string name = 2;
    string description = 3;
    uint32 price = 4;
}

message CartItem {
    uint32 user_id = 1;
    uint32 product_id = 2;
    uint32 quantity = 3;
}

message CreateOrderRequest {
    repeated CartItem cart_items = 1;
}

message CreateOrderResponse {
    uint32 order_id = 1;
}

message GetOrderRequest {
    uint32 order_id = 1;
}

message GetOrderResponse {
    uint32 order_id = 1;
    uint32 user_id = 2;
    repeated CartItem cart_items = 3;
    uint32 total_price = 4;
    ORDER_STATUS status = 5;
}

message UpdateOrderRequest {
    uint32 order_id = 1;
    ORDER_STATUS status = 2;
}

message UpdateOrderResponse {
    uint32 order_id = 1;
    ORDER_STATUS status = 2;
}

message DeleteOrderRequest {
    uint32 order_id = 1;
}

message DeleteOrderResponse {
    uint32 order_id = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}
